--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,53 @@
 /*  your css code here. If applicable */
+body{
+	background-color: rgb(204, 204, 204);
+}
+h1{
+	text-align:center;
+}
+
+.rectangle{
+	width:100%;
+	border:3px solid black;	
+	border-radius:5px;
+	background-color:white;
+}
+
+a{
+	text-decoration:none;
+}
+li{
+	list-style:none;
+}
+
+ul{
+	margin:0;
+	padding:0;
+	padding:20px
+}
+h2{
+	text-align:center;
+}
+.rectangle2{
+	text-align:center;
+	width:80%;
+	margin-left:auto;
+	margin-right:auto;
+
+	
+	border:3px solid black;
+	border-radius:5px;
+	padding:10px;
+	background-color:#fff;
+}
+
+.rectangle2>p{
+	text-align:left;
+}
+
+.player_one , .player_two{
+	background-color: rgb(255, 255, 255);
+	padding:5px;
+	boarder-radius:5px;
+	width:100%;
+}
